# starting-ragchatbot-codebase

./: CLAUDE.md  check-frontend.sh  frontend-changes.md  pyproject.toml
.claude/skills/branch/: SKILL.md
.claude/skills/ship/: SKILL.md
backend/: ai_generator.py  app.py  document_processor.py  rag_system.py  search_tools.py  session_manager.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py  test_rag_system.py  test_search_tools.py
frontend/: .prettierrc  index.html  package-lock.json  package.json  script.js  style.css
